[fix] Hide sidebar on mobile

--- a/jekyll/_sass/_articles.scss
+++ b/jekyll/_sass/_articles.scss
@@ -1,7 +1,11 @@
 .article-container{
 	float: left;
 	padding: 30px 43px 0;
-	width: 75%;
+    width: 75%;
+
+	@include media-breakpoint-down(sm) {
+		width: auto;
+	}
 }
 
 body.embedded {
