--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -3,6 +3,10 @@
 	background-color: $nav-bg-color;
 	padding: 30px 20px 20px;
 	width: 25%;
+
+	@include media-breakpoint-down(sm) {
+		display: none;
+	}
 }
 
 nav.sidebar {
